specify footer animation in pixels to avoid jumpy behavior

--- a/resources/less/global.less
+++ b/resources/less/global.less
@@ -144,19 +144,19 @@ body {
 
     @-webkit-keyframes drift {
       from { background-position-x: 0; }
-      to { background-position-x: 100%; }
+      to { background-position-x: 250px; }
     }
     @-moz-keyframes drift {
       from { background-position-x: 0; }
-      to { background-position-x: 100%; }
+      to { background-position-x: 250px; }
     }
     @-o-keyframes drift {
       from { background-position-x: 0; }
-      to { background-position-x: 100%; }
+      to { background-position-x: 250px; }
     }
     @keyframes drift {
       from { background-position-x: 0; }
-      to { background-position-x: 100%; }
+      to { background-position-x: 250px; }
     }
 
     -webkit-animation: drift 30s linear infinite;
